--- a/index.html
+++ b/index.html
@@ -3,127 +3,106 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>💖 Soulmate Test 💖</title>
+    <title>💖 Love Quiz 💖</title>
     <style>
         body {
-            font-family: 'Comic Sans MS', cursive, sans-serif;
-            background: linear-gradient(135deg, #ff9a9e, #fad0c4);
             text-align: center;
-            color: white;
-            padding: 50px;
-            animation: fadeIn 2s ease-in-out;
+            font-family: Arial, sans-serif;
+            background-color: #ffccff;
+            color: #660066;
         }
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
-        }
-        .container {
-            background: rgba(255, 255, 255, 0.2);
-            padding: 20px;
-            border-radius: 20px;
-            display: inline-block;
-            box-shadow: 0 0 20px rgba(255, 255, 255, 0.4);
-            animation: popUp 1s ease-in-out;
-        }
-        @keyframes popUp {
-            from { transform: scale(0.8); opacity: 0; }
-            to { transform: scale(1); opacity: 1; }
-        }
+        .hidden { display: none; }
         button {
-            background: #ff6f61;
+            background-color: #ff66b2;
             color: white;
             border: none;
             padding: 10px 20px;
-            border-radius: 10px;
-            cursor: pointer;
             font-size: 18px;
             margin: 10px;
-            transition: 0.3s;
+            cursor: pointer;
+            border-radius: 5px;
         }
         button:hover {
-            background: #ff4f41;
-            transform: scale(1.1);
-        }
-        .hidden {
-            display: none;
-        }
-        h1, h2 {
-            text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+            background-color: #ff3385;
         }
         img {
-            width: 80%;
-            max-width: 400px;
-            border-radius: 10px;
-            margin-top: 15px;
-            box-shadow: 0 0 15px rgba(255, 255, 255, 0.5);
+            max-width: 300px;
+            margin-top: 20px;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>💖 Welcome to Amarha’s Love Test 💖</h1>
-        <div id="step1">
-            <h2>Enter Your Name:</h2>
-            <input type="text" id="nameInput" placeholder="Your Name...">
-            <button onclick="nextStep()">Next ➡️</button>
-        </div>
-        
-        <div id="step2" class="hidden">
-            <h2>Are you Amarha’s cute babybear 🧸 that he loves so much? 🥰</h2>
-            <button onclick="checkAnswer(true, 'step3')">Yes 😍</button>
-            <button onclick="retry()">No ❌</button>
-        </div>
 
-        <div id="step3" class="hidden">
-            <h2>Do you love him? 💖</h2>
-            <button onclick="checkAnswer(true, 'step4')">Yes 😘</button>
-            <button onclick="retry()">No 💔</button>
-        </div>
+    <h1>💖 Welcome to Amarha's Love Quiz 💖</h1>
+    
+    <!-- Step 1: Enter Name -->
+    <div id="step1">
+        <h2>Enter Your Name:</h2>
+        <input type="text" id="nameInput">
+        <button onclick="startQuiz()">Next</button>
+    </div>
 
-        <div id="step4" class="hidden">
-            <h2>Would you stay with him forever? 💍</h2>
-            <button onclick="checkAnswer(true, 'step5')">Yes 🥹💕</button>
-            <button onclick="retry()">No 😭</button>
-        </div>
+    <!-- Step 2: First Question -->
+    <div id="step2" class="hidden">
+        <h2>Are you Amarha’s cute babybear whom he loves so much and would die for? 😍</h2>
+        <button onclick="nextStep(3)">Yes</button>
+        <button onclick="retry()">No</button>
+    </div>
 
-        <div id="step5" class="hidden">
-            <h2>Would you let him drive his Hot Wheels over you? 🚗💨</h2>
-            <button onclick="checkAnswer(true, 'finalMessage')">Yes 😂❤️</button>
-            <button onclick="retry()">No 😤</button>
-        </div>
+    <!-- Step 3: Second Question -->
+    <div id="step3" class="hidden">
+        <h2>Do you love him? 🥺💖</h2>
+        <button onclick="nextStep(4)">Yes</button>
+        <button onclick="retry()">No</button>
+    </div>
 
-        <div id="finalMessage" class="hidden">
-            <h2>🥰 Baby, if you made it here... 🥰</h2>
-            <p>IT MEANS YOU'RE MY SOULMATEEEEE 💞 I LOVE YOU SO MUCH 😭💖</p>
-            <p>I WANNA MAKE YOU SO HAPPY THAT YOU FORGET WHAT SADNESS EVEN IS. 💫✨</p>
-            <p>YOU ARE THE BEST PERSON IN MY LIFE EVER 😭💕💖</p>
-            <p>I wanna make you feel so precious and amazing, my try-hard babyyyy 😘💖💖</p>
-            <h1>💘💖💞💖💘</h1>
-            <img src="love1.jpg" alt="My Person > Everyone Else">
-            <img src="love2.jpg" alt="I Wanna Be With You Forever">
-        </div>
+    <!-- Step 4: Third Question -->
+    <div id="step4" class="hidden">
+        <h2>Would you stay with him forever? 💍💖</h2>
+        <button onclick="nextStep(5)">Yes</button>
+        <button onclick="retry()">No</button>
+    </div>
+
+    <!-- Step 5: Fourth Question -->
+    <div id="step5" class="hidden">
+        <h2>Would you let him drive his Hot Wheels over you? 🚗😂</h2>
+        <button onclick="nextStep(6)">Yes</button>
+        <button onclick="retry()">No</button>
+    </div>
+
+    <!-- Final Message -->
+    <div id="finalMessage" class="hidden">
+        <h2>🥰 Baby, if you made it here... 🥰</h2>
+        <p>IT MEANS YOU'RE MY SOULMATEEEEE 💞 I LOVE YOU SO MUCH 😭💖</p>
+        <p>I WANNA MAKE YOU SO HAPPY THAT YOU FORGET WHAT SADNESS EVEN IS. 💫✨</p>
+        <p>YOU ARE THE BEST PERSON IN MY LIFE EVER 😭💕💖</p>
+        <p>I wanna make you feel so precious and amazing, my try-hard babyyyy 😘💖💖</p>
+        <h1>💘💖💞💖💘</h1>
+        <img src="love1.jpg" alt="My Person > Everyone Else">
+        <img src="love2.jpg" alt="I Wanna Be With You Forever">
     </div>
 
     <script>
-        function nextStep() {
-            document.getElementById('step1').classList.add('hidden');
-            document.getElementById('step2').classList.remove('hidden');
+        function startQuiz() {
+            let name = document.getElementById("nameInput").value;
+            if (name.trim() === "") {
+                alert("Please enter your name! 😊");
+                return;
+            }
+            document.getElementById("step1").classList.add("hidden");
+            document.getElementById("step2").classList.remove("hidden");
         }
 
-        function checkAnswer(correct, nextStepId) {
-            if (correct) {
-                let currentStep = document.querySelector('.container .hidden:not([id])');
-                if (currentStep) currentStep.classList.add('hidden');
-                document.getElementById(nextStepId).classList.remove('hidden');
-            } else {
-                retry();
-            }
+        function nextStep(stepNumber) {
+            let currentStep = stepNumber - 1;
+            document.getElementById("step" + currentStep).classList.add("hidden");
+            document.getElementById("step" + stepNumber).classList.remove("hidden");
         }
 
         function retry() {
-            alert("Try again! 😜💔");
-            location.reload();
+            alert("Try again! 🥺💖");
         }
     </script>
+
 </body>
 </html>
